cambios imagen home y texto vulnerabilidad

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -20,6 +20,12 @@ body {
   background-color: #f5f1f0;
 }
 
+.bgimghome {
+  background-image: url(./img/fondoilust.png);
+  background-repeat: no-repeat;
+  background-position: right bottom;
+}
+
 h1, h2 {
   font-family: 'Libre Baskerville', serif;
 }
@@ -138,9 +144,6 @@ section {
 }
 
 .sectionhome {
-  background-image: url(./img/fondoilust.png);
-  background-repeat: no-repeat;
-  background-position: right bottom;
   display: -webkit-flex;
   display: -moz-flex;
   display: -ms-flex;
@@ -460,17 +463,12 @@ footer h2 {
   color: #5DB2BA;
   font-size: 22px;
   display: block;
-  padding: 0 0 25px;
+  padding: 25px 0;
   font-weight: 400;
 }
 
 .hectareas b {
   font-weight: 600;
-}
-
-.vulne {
-  padding: 25px 0 0;
-  color: #D37750;
 }
 
 .blockdata p {
